--- a/gsheets_import/templates/admin/gsheets_import/import.html
+++ b/gsheets_import/templates/admin/gsheets_import/import.html
@@ -49,14 +49,6 @@
   {{ block.super }}
   {# Load a custom script to dynamically size the preview table and produce sticky column headers #}
   <script type="module" src="{% static 'gsheets_import/js/sticky.js' %}"></script>
-  {# Load JavaScript's Google API and a custom script to handle the import of Google Sheets #}
-  <script src="https://apis.google.com/js/api.js" defer></script>
-  <script>
-    const developerKey = '{{ gsheets_import_api_key }}';
-    const clientId = '{{ gsheets_import_client_id }}';
-    const appId = '{{ gsheets_import_app_id }}';
-  </script>
-  <script type="module" src="{% static 'gsheets_import/js/import_gs.js' %}"></script>
 {% endblock %}
 
 {% block breadcrumbs_last %}
@@ -226,4 +218,24 @@
     {% endif %}
 
   {% endif %}
+
+{% endblock %}
+
+
+{% block footer %}
+
+    {{ block.super }}
+
+    {# Load JavaScript's Google API and a custom script to handle the import of Google Sheets #}
+    <script>
+        const developerKey = '{{ gsheets_import_api_key }}';
+        const clientId = '{{ gsheets_import_client_id }}';
+        const appId = '{{ gsheets_import_app_id }}';
+    </script>
+    <script type="text/javascript" src="{% static 'gsheets_import/js/import_gs.js' %}"></script>
+    <script async defer src="https://apis.google.com/js/api.js"
+          onload="this.onload = function() {}; loadLibraries()"
+          onreadystatechange="if(this.readyState === 'complete') this.onload()">
+    </script>
+
 {% endblock %}
