--- a/gsheets_import/templates/forms/widgets/file_and_google.html
+++ b/gsheets_import/templates/forms/widgets/file_and_google.html
@@ -1,5 +1,5 @@
 
-<button class="file-google-button" type="button" id="id_import_file">Select a file ...</button>
+<button class="file-google-button" type="button" id="id_import_file" disabled>Select a file ...</button>
 <span class="file-google-span" id="id_import_file_span">No file selected.</span>
 
 <input type="file" style="display: none" name="import_file" id="id_import_file_os_file" class="os-file">
