--- a/gsheets_import/templates/forms/widgets/file_and_google.html
+++ b/gsheets_import/templates/forms/widgets/file_and_google.html
@@ -5,5 +5,6 @@
 <input type="file" style="display: none" name="import_file" id="id_import_file_os_file" class="os-file">
 
 <input type="hidden" name="google_file_id" class="google-file" id="id_import_file_google_id">
+<input type="hidden" name="google_file_name" class="google-file" id="id_import_file_google_name">
 <input type="hidden" name="oauth_token" class="google-file" id="id_import_file_google_oauth_token">
 <input type="hidden" name="is_google" class="google-file" id="id_import_file_is_google">
