Moved displayed text on import page to context variables

--- a/gsheets_import/templates/admin/gsheets_import/import.html
+++ b/gsheets_import/templates/admin/gsheets_import/import.html
@@ -231,6 +231,7 @@
         const developerKey = '{{ gsheets_import_api_key }}';
         const clientId = '{{ gsheets_import_client_id }}';
         const appId = '{{ gsheets_import_app_id }}';
+        const gsFormatDisplayName = '{{ gs_format_display_name }}';
         const dummyChoiceTxt = '{{ dummy_choice_txt }}';
     </script>
     <script type="text/javascript" src="{% static 'gsheets_import/js/import_gs.js' %}"></script>
