--- a/gsheets_import/templates/admin/gsheets_import/import.html
+++ b/gsheets_import/templates/admin/gsheets_import/import.html
@@ -226,18 +226,20 @@
 
     {{ block.super }}
 
-    {# Load JavaScript's Google API and a custom script to handle the import of Google Sheets #}
-    <script>
-        const developerKey = '{{ gsheets_import_api_key }}';
-        const clientId = '{{ gsheets_import_client_id }}';
-        const appId = '{{ gsheets_import_app_id }}';
-        const gsFormatDisplayName = '{{ gs_format_display_name }}';
-        const dummyChoiceTxt = '{{ dummy_choice_txt }}';
-    </script>
-    <script type="text/javascript" src="{% static 'gsheets_import/js/import_gs.js' %}"></script>
-    <script async defer src="https://apis.google.com/js/api.js"
-          onload="this.onload = function() {}; loadLibraries()"
-          onreadystatechange="if(this.readyState === 'complete') this.onload()">
-    </script>
+    {% if not confirm_form %}
+        {# Load JavaScript's Google API and a custom script to handle the import of Google Sheets #}
+        <script>
+            const developerKey = '{{ gsheets_import_api_key }}';
+            const clientId = '{{ gsheets_import_client_id }}';
+            const appId = '{{ gsheets_import_app_id }}';
+            const gsFormatDisplayName = '{{ gs_format_display_name }}';
+            const dummyChoiceTxt = '{{ dummy_choice_txt }}';
+        </script>
+        <script type="text/javascript" src="{% static 'gsheets_import/js/import_gs.js' %}"></script>
+        <script async defer src="https://apis.google.com/js/api.js"
+              onload="this.onload = function() {}; loadLibraries()"
+              onreadystatechange="if(this.readyState === 'complete') this.onload()">
+        </script>
+    {% endif %}
 
 {% endblock %}
